[package]
name = "uno"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
# --- TUI client deps ---
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
flume = "0.11"
