[package]
name = "uno"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
# --- TUI client deps ---
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
flume = "0.11"
# --- async multi-room server deps ---
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
anyhow = "1.0.99"
futures = "0.3.31"
